--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,30 @@ button {
   height: 100px;
   font-size: 30px;
 }
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sailor-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sailor-form input {
+  margin: 10px;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.sailor-form button {
+  width: 208px;
+  height: 75px;
+  text-align: center;
+}
+
