--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,12 @@ button {
   text-align: center;
 }
 
+.sailor-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sailor {
+  margin: 10px;
+}
