--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+#root {
+  width: 100%;
+  margin: auto;
+}
 .App {
   text-align: center;
   display: flex;
@@ -47,4 +51,18 @@ button {
 
 .sailor {
   margin: 10px;
+}
+
+.timeslot {
+  width: 80%;
+  justify-content: center;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.timeslot-container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
