--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
+body {
+  height: 97vh;
+}
 #root {
   width: 100%;
+  height: 100%;
   margin: auto;
 }
 .App {
@@ -10,7 +14,7 @@
   align-items: center;
 }
 
-button {
+.sailor-form button {
   margin-top: 30px;
   width: 200px;
   height: 100px;
@@ -65,26 +69,28 @@ button {
   flex-direction: column;
   align-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .signup-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40%;
+  width: 100%;
   margin-top: 30px;
+  height: 100%;
 }
 
 .signup-form input {
-  width: 250px;
+  /* width: 250px;
   height: 40px;
   margin: 5px;
-  font-size: 16px;
+  font-size: 16px; */
 }
 
 .signup-form button {
-  font-size: 18px;
+  /* font-size: 18px;
   width: 250px;
   height: 40px;
-  margin: 10px;
+  margin: 10px; */
 }
