--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,7 +61,7 @@ body {
   width: 80%;
   justify-content: center;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .timeslot-container {
@@ -163,5 +163,18 @@ body {
   height: 4rem;
   font-size: 2rem;
   padding-bottom:4px;
+  text-align: center;
+}
+
+.timeslots-available {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-content:center;
+  align-items:center;
+  margin-bottom: 45px;
+}
+.timeslots-available .slot-num {
+  flex: 1;
   text-align: center;
 }
