--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@ body {
   width: 100%;
   height: 100%;
   margin: auto;
+  
 }
 .App {
   text-align: center;
@@ -71,11 +72,119 @@ body {
   align-items: center;
   height: 100%;
 }
+/* TIMESLOT POST OPTIONS */
+
+.post-header {
+  height: 80px;
+  width: 95vw;
+  padding:20px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.ilca-logo {
+  width: 180px;
+  align-self: flex-start;
+}
+.post-title {
+  width: 500px;
+  font-size: 30px;
+  text-align: center;
+  align-self: center;
+  margin-right: 200px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.timeslot-post {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 98vw;
+  margin: auto;
+}
 
 .timeslot-options-container {
   display: flex;
   flex-direction:row;
 }
+
+.rdrCalendarWrapper.rdrDateRangeWrapper.calendar {
+  font-size: 18px;
+  filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
+}
+
+.timeslot-details-group {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  align-content: center;
+  margin: auto;
+}
+
+.timeslot-option-flex {
+  display: flex;
+  height: 300px;
+  flex-direction: column;
+  align-items: center;
+  align-content: space-between;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 3px;
+  background-color: white;
+  border: 4px solid rgb(190, 190, 190);
+  filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
+}
+
+.event-detail-form {
+  min-width: 250px !important;
+  display: flex !important;
+}
+
+.start-end-times {
+  width: 250px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+  align-items:center;
+  justify-content: center;
+  align-content: center;
+}
+.start-end-labels {
+  width: 250px;
+  display: flex;
+  flex-direction: row;
+  align-items:stretch;
+  justify-content:center;
+}
+.start-end-times .label {
+  width: 250px;
+  text-align:center;
+}
+.start-end-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.start-end-group-container {
+  width: 200px;
+  height: 240px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  background-color: white;
+  border-radius: 3px;
+  border: 4px solid rgb(190, 190, 190);
+  filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
+}
+/* END OF TIMESLOT OPTIONS */
 
 .signup-form {
   display: flex;
@@ -91,60 +200,13 @@ body {
   height: 100px;
 }
 
-.timeslot-post {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center;
-  margin-top: 20px;
-  width: 98vw;
-  margin: auto;
-}
-
 .rc-time-picker-input {
   min-height: 60px;
   width: 120px !important;
   font-size: 20px !important;
 }
 
-.start-end-times {
-  width: 250px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap:wrap;
-  align-items:center;
-}
-.start-end-labels {
-  width: 250px;
-  display: flex;
-  flex-direction: row;
-  align-items:stretch;
-  justify-content:center;
-}
-.start-end-times .label {
-  width: 250px;
-  text-align:center;
-}
-
-.start-end-group {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.timeslot-option-group {
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items:center;
-  align-content: center;
-  margin: auto;
-}
-
-.home-link {
+.link {
   margin: 15px;
   font-size: 18px;
 }
@@ -201,3 +263,4 @@ body {
   margin-bottom: 5px;
   padding: 5px;
 }
+
