--- a/client/src/App.css
+++ b/client/src/App.css
@@ -259,8 +259,49 @@ body {
 }
 
 .admin-slot-container {
-  border-bottom: 1px solid black;
+  border: 4px solid rgb(182, 182, 182);
   margin-bottom: 5px;
-  padding: 5px;
+  padding: 10px;
+  background-color: white;
+  filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
+  margin-bottom: 20px;
 }
 
+
+
+
+.admin-day {
+  border: 4px solid rgb(136, 164, 174);
+  border-radius: 5px;
+  background-color: white;
+  width: 90vw;
+  margin: auto;
+  margin-bottom: 10px;
+  filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
+}
+
+.admin-time {
+  margin-bottom: 10px;
+}
+
+.admin-day-slot-container {
+  text-align:center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-around;
+  width: 98.5%;
+  margin: auto;
+}
+
+.admin-reg-sailors-container {
+  border-bottom: 2px solid black;
+}
+
+.reg-sailor-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
