--- a/client/src/App.css
+++ b/client/src/App.css
@@ -276,7 +276,7 @@ body {
   background-color: white;
   width: 90vw;
   margin: auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
 }
 
@@ -292,10 +292,13 @@ body {
   justify-content: space-around;
   width: 98.5%;
   margin: auto;
+  margin-bottom: 10px;
 }
 
 .admin-reg-sailors-container {
   border-bottom: 2px solid black;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .reg-sailor-flex {
@@ -304,4 +307,9 @@ body {
   justify-content: space-around;
   flex-wrap: wrap;
   margin-bottom: 10px;
+}
+
+.admin-event-title {
+  font-size: 30px;
+  text-align: center;
 }
