--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,7 +129,7 @@ body {
 
 .timeslot-option-flex {
   display: flex;
-  height: 300px;
+  height: 250px;
   flex-direction: column;
   align-items: center;
   align-content: space-between;
@@ -333,3 +333,15 @@ body {
   flex-wrap: wrap;
 }
 
+.submission-cancellation-button-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.submission-cancellation-button {
+  margin: 5px !important;
+}
