--- a/client/src/App.css
+++ b/client/src/App.css
@@ -345,3 +345,25 @@ body {
 .submission-cancellation-button {
   margin: 5px !important;
 }
+
+.event-list-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.admin-event-card {
+  width: 440px;
+  height: 150px;
+  background-color: rgb(250, 250, 250);
+  margin: 12px;
+  filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
+  border: 2px solid grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
