--- a/client/src/App.css
+++ b/client/src/App.css
@@ -154,6 +154,7 @@ body {
   align-items:center;
   justify-content: center;
   align-content: center;
+  z-index: 2;
 }
 .start-end-labels {
   width: 250px;
@@ -165,16 +166,18 @@ body {
 .start-end-times .label {
   width: 250px;
   text-align:center;
+  margin-bottom: 4px;
 }
 .start-end-group {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 .start-end-group-container {
   width: 200px;
-  height: 240px;
+  min-height: 240px;
   display: flex;
   flex-direction: column;
   align-items: center;
