--- a/client/src/App.css
+++ b/client/src/App.css
@@ -318,8 +318,8 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   max-width: 200px;
-  min-width: 200px;
-  margin: 30px;
+  min-width: 200px; 
+  margin: 10px;
 }
 
 .admin-event-title {
@@ -360,7 +360,7 @@ body {
 
 .admin-event-card {
   width: 440px;
-  height: 150px;
+  min-height: 150px;
   background-color: rgb(250, 250, 250);
   margin: 12px;
   filter: drop-shadow(0 0 0.75rem rgb(190, 190, 190));
@@ -368,5 +368,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-content: center;
+  align-items: center;
 }
 
