--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,18 +81,21 @@ body {
   padding-bottom: 0;
   margin: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .ilca-logo {
   width: 180px;
-  align-self: flex-start;
+  margin-bottom: 20px;
 }
 .post-title {
   width: 500px;
   font-size: 30px;
   text-align: center;
   align-self: center;
-  margin-right: 200px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
