--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,6 +114,9 @@ body {
 .timeslot-options-container {
   display: flex;
   flex-direction:row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .rdrCalendarWrapper.rdrDateRangeWrapper.calendar {
@@ -122,12 +125,11 @@ body {
 }
 
 .timeslot-details-group {
-  width: 500px;
   display: flex;
   flex-direction: column;
   align-items:center;
   align-content: center;
-  margin: auto;
+  margin: 30px;
 }
 
 .timeslot-option-flex {
@@ -158,6 +160,7 @@ body {
   justify-content: center;
   align-content: center;
   z-index: 2;
+  margin: 30px 30px 30px 0px;
 }
 .start-end-labels {
   width: 250px;
